[gd_scene load_steps=17 format=3 uid="uid://b5dpenco0nwh"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_unpyb"]
[ext_resource type="Texture2D" uid="uid://cvh81gqdgik60" path="res://assets/kid.png" id="2_ikrn2"]
[ext_resource type="AudioStream" uid="uid://b5go0wfl04jnp" path="res://assets/sounds/sfx/footsteps/footsteps 1.1.ogg" id="3_kyaws"]
[ext_resource type="AudioStream" uid="uid://y6y1jxeixino" path="res://assets/sounds/sfx/footsteps/footsteps 1.2.ogg" id="3_y60j8"]
[ext_resource type="AudioStream" uid="uid://1jisd3uwse2c" path="res://assets/sounds/sfx/footsteps/footsteps 1.3.ogg" id="4_2jjmw"]
[ext_resource type="AudioStream" uid="uid://djcy7657nsn07" path="res://assets/sounds/sfx/jumps/jump.ogg" id="4_i6en7"]
[ext_resource type="AudioStream" uid="uid://donnng08weauh" path="res://assets/sounds/sfx/footsteps/footsteps 1.4.ogg" id="5_s680q"]
[ext_resource type="AudioStream" uid="uid://ctauxd2w0osom" path="res://assets/sounds/sfx/footsteps/footsteps 1.5.ogg" id="6_rb2lu"]
[ext_resource type="AudioStream" uid="uid://dslq56osjh60r" path="res://assets/sounds/sfx/footsteps/footsteps 1.6.ogg" id="7_f8dgv"]
[ext_resource type="AudioStream" uid="uid://dnxjb86l3mkbc" path="res://assets/sounds/sfx/footsteps/footsteps 1.7.ogg" id="8_tpoop"]
[ext_resource type="AudioStream" uid="uid://5igifxac86jt" path="res://assets/sounds/sfx/footsteps/footsteps 1.8.ogg" id="9_qcrce"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j5cgr"]
radius = 0.257523
height = 1.18787

[sub_resource type="CylinderMesh" id="CylinderMesh_tcg3x"]
top_radius = 0.2
bottom_radius = 0.2
height = 0.01
rings = 1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yukxb"]
streams_count = 8
stream_0/stream = ExtResource("3_kyaws")
stream_1/stream = ExtResource("3_y60j8")
stream_2/stream = ExtResource("4_2jjmw")
stream_3/stream = ExtResource("5_s680q")
stream_4/stream = ExtResource("6_rb2lu")
stream_5/stream = ExtResource("7_f8dgv")
stream_6/stream = ExtResource("8_tpoop")
stream_7/stream = ExtResource("9_qcrce")

[sub_resource type="AtlasTexture" id="AtlasTexture_p38oi"]
atlas = ExtResource("2_ikrn2")
region = Rect2(0, 59, 300, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_hygqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p38oi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="RigidBody3D" groups=["Player"]]
collision_layer = 8193
lock_rotation = true
linear_damp = 2.0
script = ExtResource("1_unpyb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.246339, 0)
shape = SubResource("CapsuleShape3D_j5cgr")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="TwistPivot/PitchPivot"]
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0, 5.96046e-08, 3)

[node name="ThrowPosition" type="Marker3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.694835, -0.306353)

[node name="ShadowMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
cast_shadow = 3
gi_mode = 0
mesh = SubResource("CylinderMesh_tcg3x")

[node name="GroundDetectors" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.286408, 0)

[node name="GroundDetector" type="RayCast3D" parent="GroundDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 0.1)
target_position = Vector3(0, -0.1, 0)

[node name="GroundDetector2" type="RayCast3D" parent="GroundDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, -0.1)
target_position = Vector3(0, -0.1, 0)

[node name="GroundDetector3" type="RayCast3D" parent="GroundDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, -0.1)
target_position = Vector3(0, -0.1, 0)

[node name="GroundDetector4" type="RayCast3D" parent="GroundDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, 0.1)
target_position = Vector3(0, -0.1, 0)

[node name="Audios" type="Node3D" parent="."]

[node name="FootStep" type="AudioStreamPlayer3D" parent="Audios"]
stream = SubResource("AudioStreamRandomizer_yukxb")
bus = &"SFX"

[node name="Jump" type="AudioStreamPlayer3D" parent="Audios"]
stream = ExtResource("4_i6en7")
volume_db = -20.0
bus = &"SFX"

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.328644, 0)
billboard = 1
sprite_frames = SubResource("SpriteFrames_hygqf")
